<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".description">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="321dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:paddingLeft="25dp"
            android:text="Body Mass Index "
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/heading1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/heading1"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description1"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/description1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/heading2"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="10sp"
                android:text="@string/descption2" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:lineSpacingExtra="10sp"
                android:text="@string/description2.1" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/heading3"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/description3" />

            <TextView
                android:id="@+id/findmoreonweb"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="Find more on web"
                android:textColor="@android:color/background_light" />


        </LinearLayout>
    </ScrollView>




</LinearLayout>